Implemented fetch users

--- a/app/src/main/res/layout/act_contacts.xml
+++ b/app/src/main/res/layout/act_contacts.xml
@@ -7,14 +7,9 @@
     tools:context=".ContactsActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="226dp"
-        android:layout_height="392dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
